# Pixel-Mirroring

./: .gitignore  .gitmodules  AGENTS.md  LICENSE.md  PROBLEME.md  README.md
.github/workflows/: release.yml
Android/: gradle.properties  local.properties  settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/dev/pixelmirroring/app/: MainActivity.kt
Android/app/src/main/java/dev/pixelmirroring/app/data/: PairedClientStore.kt
Android/app/src/main/java/dev/pixelmirroring/app/network/: ApiModels.kt  NetworkScanner.kt
Android/app/src/main/java/dev/pixelmirroring/app/service/: AdbWifiManager.kt  BootReceiver.kt  DiscoveryHttpServer.kt  MirroringService.kt  NotificationHelper.kt
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/xml/: data_extraction_rules.xml
Client/: CMakeLists.txt  CMakePresets.json  Preview.cs  vcpkg.json
Client/src/: main.cpp  settings.cpp  settings.h
Client/src/adb/: adb_client.cpp  adb_client.h
Client/src/input/: input_handler.cpp  input_handler.h
Client/src/network/: network_scanner.cpp  network_scanner.h
Client/src/stream/: scrcpy_client.cpp  scrcpy_client.h  video_decoder.cpp  video_decoder.h  video_renderer.cpp  video_renderer.h  video_stubs.cpp
Client/src/tray/: tray_interface.h  win32_tray.cpp  win32_tray.h
Client/src/window/: cocoa_window.h  cocoa_window.mm  win32_window.cpp  win32_window.h  window_interface.h
